# hypersim

./: .gitignore  README.md  analyze_vertices.py  debug_tesseract.py  pyproject.toml  requirements.txt  simple_test.py  tesseract.py  test_improved_tesseract.py  test_renderer_fix.py  test_tesseract_rendering.py
examples/: basic_tesseract.py  interactive_tesseract.py  pygame_simplex.py  pygame_sixteen_cell.py  pygame_tesseract.py
hypersim/: __init__.py  version.py
hypersim/cli/: __init__.py  __main__.py
hypersim/core/: __init__.py  math_4d.py  math_utils.py  shape_4d.py
hypersim/engine/: __init__.py  plugins.py  scene.py  simulation.py
hypersim/integrations/: __init__.py
hypersim/io/: __init__.py
hypersim/objects/: __init__.py  hypercube.py  simplex_4d.py  sixteen_cell.py
hypersim/visualization/: __init__.py
hypersim/visualization/renderers/: matplotlib_renderer.py
hypersim/visualization/renderers/pygame/: __init__.py  color.py  renderer.py
hypersim/visualization/renderers/pygame/core/: __init__.py  camera.py  renderer.py
hypersim/visualization/renderers/pygame/core/shaders/: __init__.py
hypersim/visualization/renderers/pygame/graphics/: __init__.py  color.py
hypersim/visualization/renderers/pygame/graphics/primitives/: __init__.py  lines.py
hypersim/visualization/renderers/pygame/graphics/scene/: __init__.py  (+1 more)
hypersim/visualization/renderers/pygame/input/: __init__.py  handlers.py
hypersim/visualization/renderers/pygame/ui/: __init__.py  overlay.py  shape_info_overlay.py
hypersim/visualization/renderers/pygame/utils/: __init__.py
